Update method names - Remove burn method
