# src/routes/api.js
@@ -114,26 +114,7 @@ export default class APIRouter extends Router {
 			}
 		} );
 
-		this.post( '/burn', async req => {
-			const { tokenAddress, amount } = req.body;
-
-			if( isNaN( amount ) ) throw new Error( "amount is not a number" );
-
-			const object = await redisClient.get( tokenAddress );
-			if( !object ) throw new Error( "Invalid token address" );
-
-			const institution = JSON.parse( object );
-			const token = new ethers.Contract( institution.token, InteroperableTokenJSON.abi, operator );
-
-			await token.burn( `0x${amount.toString( 16 )}` );
-
-			const totalSupply = await token.totalSupply();
-			return {
-				totalSupply: totalSupply.toString()
-			}
-		} );
-
-		this.post( '/transfer', async req => {
+		this.post( '/transferInstitution1', async req => {
 			const { fromAddress, toAddress, amount } = req.body;
 
 			if( isNaN( amount ) ) throw new Error( "amount is not a number" );
@@ -191,7 +172,7 @@ export default class APIRouter extends Router {
 			return true;
 		} );
 
-		this.post( '/withdraw', async req => {
+		this.post( '/transferInstitution2', async req => {
 			const { tokenAddress, preimage, nullifierHash } = req.body;
 
 			const object = await redisClient.get( tokenAddress );
